Run tests in Build